--- a/public/views/login/login-form.html
+++ b/public/views/login/login-form.html
@@ -41,8 +41,8 @@
         </div>
         <!-- /.social-auth-links -->
 
-        <a href="#">I forgot my password</a><br>
-        <a href="register.html" class="text-center">Register a new membership</a>
+        <a routerLink="/forgot-password" routerLinkActive="active" >I forgot my password</a><br>
+        <a routerLink="/register" routerLinkActive="active" class="text-center">Register a new membership</a>
 
     </div>
     <!-- /.login-box-body -->
